fixed menu in header on mobile

--- a/src/sass/base/modal.scss
+++ b/src/sass/base/modal.scss
@@ -11,7 +11,6 @@ body {
   bottom: 0;
   left: 0;
   display: none;
-  overflow-y: scroll;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 99999999;
 
