--- a/src/sass/components/menu-mobile.scss
+++ b/src/sass/components/menu-mobile.scss
@@ -45,10 +45,8 @@
     padding-left: 60px;
     padding-right: 20px;
     padding-bottom: 25px;
-  }
-
-  &--submenu &__list {
-
+    max-height: 80vh;
+    overflow-y: auto;
   }
 
   &__list-item {
